Fix: Replaced Markdown ** with <strong> tag in all 5 languages for correct formatting.

--- a/cz.html
+++ b/cz.html
@@ -247,13 +247,13 @@
                 <p>Educatimo Neuro je vytvořeno týmem expertů v kognitivní psychologii a IT. Záleží nám na důkazech a efektivitě.</p>
             </div>
 
-            <div class="about-us-block">
+           <div class="about-us-block">
                 <h3>Založeno na vědě a zkušenostech</h3>
-                <p>Náš projekt byl vytvořen bez pomoci profesionálních programátorů a marketérů. Jedná se o řešení **od pedagogů pro pedagogy**. Tuto myšlenku jsme nejprve otestovali **v našich dětských vzdělávacích centrech**, získali pozitivní zpětnou vazbu od rodičů a viděli zájem dětí.</p>
-                <p>Teprve poté vás zveme k účasti v pilotním projektu, protože jsme si jisti jeho účinností. Sdílíme své zkušenosti a vítáme nové **kolegy-praktiky**!</p>
-                <p>Projekt Educatimo Neuro vznikl v roce 2018 jako lokální řešení pro hodnocení a korekci kognitivních funkcí **v našich dětských vzdělávacích centrech**. Dnes, díky spolupráci s předními neuropsychology, jsme jej transformovali na škálovatelnou SaaS platformu. Náš tým má 10 let zkušeností s vývojem vzdělávacích technologií a zaručuje metodickou přesnost každého testu a algoritmu.</p>
+                <p>Náš projekt byl vytvořen bez pomoci profesionálních programátorů a marketérů. Jedná se o řešení <strong>od pedagogů pro pedagogy</strong>. Tuto myšlenku jsme nejprve otestovali v našich dětských vzdělávacích centrech, získali pozitivní zpětnou vazbu od rodičů a viděli zájem dětí.</p>
+                <p>Teprve poté vás zveme k účasti v pilotním projektu, protože jsme si jisti jeho účinností. Sdílíme své zkušenosti a vítáme nové <strong>kolegy-praktiky</strong>!</p>
+                <p>Projekt Educatimo Neuro vznikl v roce 2018 jako lokální řešení pro hodnocení a korekci kognitivních funkcí <strong>v našich dětských vzdělávacích centrech</strong>. Dnes, díky spolupráci s předními neuropsychology, jsme jej transformovali na škálovatelnou SaaS platformu. Náš tým má 10 let zkušeností s vývojem vzdělávacích technologií a zaručuje metodickou přesnost každého testu a algoritmu.</p>
                 <a href="team-cz.html" class="btn secondary-btn">Zjistit více o týmu</a> </div>
-
+                
             <div class="reviews-grid">
                 <h3>Co říkají naši partneři?</h3>
                 <div class="review-item">
