--- a/en.html
+++ b/en.html
@@ -249,12 +249,12 @@
             </div>
 
             <div class="about-us-block">
-                <h3>Based on science and experience</h3>
-                <p>Our project was created without the help of professional programmers and marketers. This is a solution **from educators for educators**. We first tested this idea in **our own children's educational centers**, received positive feedback from parents, and saw children's interest.</p>
-                <p>Only after this do we invite you to join the pilot project, being confident in its effectiveness. We share our experience and welcome new **colleagues-practitioners**!</p>
-                <p>The Educatimo Neuro project originated in 2018 as a local solution for assessing and correcting cognitive functions in **our children's educational centers**. Today, thanks to cooperation with leading neuropsychologists, we have transformed it into a scalable SaaS platform. Our team has 10 years of experience in developing educational technologies and guarantees the methodological accuracy of every test and algorithm.</p>
-                <a href="team-en.html" class="btn secondary-btn">Learn more about the team</a> </div>
-
+                <h3>Based on Science and Experience</h3>
+                <p>Our project was created without the help of professional programmers or marketers. This is a solution <strong>from educators for educators</strong>. We first tested this idea in our own children's educational centers, received positive feedback from parents, and saw the children's interest.</p>
+                <p>Only after that do we invite you to participate in a pilot project, being confident in its effectiveness. We share our experience and welcome new <strong>colleague-practitioners</strong>!</p>
+                <p>The Educatimo Neuro project began in 2018 as a local solution for assessing and correcting cognitive functions <strong>in our children's educational centers</strong>. Today, thanks to cooperation with leading neuropsychologists, we have transformed it into a scalable SaaS platform. Our team has 10 years of experience in developing educational technologies and guarantees the methodological accuracy of every test and algorithm.</p>
+                <a href="team-en.html" class="btn secondary-btn">Find out more about the team</a> </div>
+                
             <div class="reviews-grid">
                 <h3>What our partners say?</h3>
                 <div class="review-item">
