--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@
                 <p>Educatimo Neuro создан командой экспертов в области когнитивной психологии и IT. Мы заботимся о доказательности и эффективности.</p>
             </div>
 
-            <div class="about-us-block">
+           <div class="about-us-block">
                 <h3>Основано на науке и опыте</h3>
-                <p>Наш проект создан без помощи профессиональных программистов и маркетологов. Это решение **от педагогов для педагогов**. Мы сначала проверили эту идею в собственных учебных центрах, получили положительный отзыв от родителей и увидели интерес детей.</p>
-                <p>Только после этого мы предлагаем вам присоединиться к пилотному проекту, будучи уверены в его эффективности. Мы делимся своим опытом и рады будем новым **коллегам-практикам**!</p>
-                <p>Проект Educatimo Neuro зародился в 2018 году как локальное решение для оценки и коррекции когнитивных функций **в наших детских образовательных центрах**. Сегодня, благодаря сотрудничеству с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет 10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность каждого теста и алгоритма.</p>
+                <p>Наш проект создан без помощи профессиональных программистов и маркетологов. Это решение <strong>от педагогов для педагогов</strong>. Мы сначала проверили эту идею в собственных учебных центрах, получили положительный отзыв от родителей и увидели интерес детей.</p>
+                <p>Только после этого мы предлагаем вам присоединиться к пилотному проекту, будучи уверены в его эффективности. Мы делимся своим опытом и рады будем новым <strong>коллегам-практикам</strong>!</p>
+                <p>Проект Educatimo Neuro зародился в 2018 году как локальное решение для оценки и коррекции когнитивных функций <strong>в наших детских образовательных центрах</strong>. Сегодня, благодаря сотрудничеству с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет 10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность каждого теста и алгоритма.</p>
                 <a href="team.html" class="btn secondary-btn">Узнать больше о команде</a> </div>
-
+                
             <div class="reviews-grid">
                 <h3>Что говорят наши партнеры?</h3>
                 <div class="review-item">
