--- a/pl.html
+++ b/pl.html
@@ -249,11 +249,11 @@
 
             <div class="about-us-block">
                 <h3>Oparte na nauce i doświadczeniu</h3>
-                <p>Nasz projekt został stworzony bez pomocy profesjonalnych programistów i marketerów. To jest rozwiązanie **od pedagogów dla pedagogów**. Najpierw przetestowaliśmy ten pomysł **w naszych własnych dziecięcych ośrodkach edukacyjnych**, otrzymaliśmy pozytywne opinie od rodziców i zobaczyliśmy zainteresowanie dzieci.</p>
-                <p>Dopiero potem zapraszamy Cię do udziału w projekcie pilotażowym, mając pewność jego skuteczności. Dzielimy się naszym doświadczeniem i witamy nowych **kolegów-praktyków**!</p>
-                <p>Projekt Educatimo Neuro powstał w 2018 roku jako lokalne rozwiązanie do oceny i korekcji funkcji poznawczych **w naszych dziecięcych ośrodkach edukacyjnych**. Dziś, dzięki współpracy z wiodącymi neuropsychologami, przekształciliśmy go w skalowalną platformę SaaS. Nasz zespół ma 10-letnie doświadczenie w tworzeniu technologii edukacyjnych i gwarantuje metodyczną dokładność każdego testu i algorytmu.</p>
+                <p>Nasz projekt został stworzony bez pomocy profesjonalnych programistów i marketerów. To jest rozwiązanie <strong>od pedagogów dla pedagogów</strong>. Najpierw przetestowaliśmy ten pomysł w naszych własnych dziecięcych ośrodkach edukacyjnych, otrzymaliśmy pozytywne opinie od rodziców i zobaczyliśmy zainteresowanie dzieci.</p>
+                <p>Dopiero potem zapraszamy Cię do udziału w projekcie pilotażowym, mając pewność jego skuteczności. Dzielimy się naszym doświadczeniem i witamy nowych <strong>kolegów-praktyków</strong>!</p>
+                <p>Projekt Educatimo Neuro powstał w 2018 roku jako lokalne rozwiązanie do oceny i korekcji funkcji poznawczych <strong>w naszych dziecięcych ośrodkach edukacyjnych</strong>. Dziś, dzięki współpracy z wiodącymi neuropsychologami, przekształciliśmy go w skalowalną platformę SaaS. Nasz zespół ma 10-letnie doświadczenie w tworzeniu technologii edukacyjnych i gwarantuje metodyczną dokładność każdego testu i algorytmu.</p>
                 <a href="team-pl.html" class="btn secondary-btn">Dowiedz się więcej o zespole</a> </div>
-
+                
             <div class="reviews-grid">
                 <h3>Co mówią nasi partnerzy?</h3>
                 <div class="review-item">
