--- a/ua.html
+++ b/ua.html
@@ -249,11 +249,11 @@
 
             <div class="about-us-block">
                 <h3>Засновано на науці та досвіді</h3>
-                <p>Наш проєкт створено без допомоги професійних програмістів та маркетологів. Це рішення **від педагогів для педагогів**. Ми спочатку перевірили цю ідею у **власних дитячих освітніх центрах**, отримали позитивний відгук від батьків та побачили інтерес дітей.</p>
-                <p>Тільки після цього ми пропонуємо вам приєднатися до пілотного проєкту, будучи впевненими у його ефективності. Ми ділимося своїм досвідом і раді будемо новим **колегам-практикам**!</p>
-                <p>Проєкт Educatimo Neuro зародився у 2018 році як локальне рішення для оцінювання та корекції когнітивних функцій у **наших дитячих освітніх центрах**. Сьогодні, завдяки співпраці з провідними нейропсихологами, ми перетворили його на масштабовану SaaS-платформу. Наша команда має 10-річний досвід у розробці освітніх технологій і гарантує методологічну точність кожного тесту та алгоритму.</p>
+                <p>Наш проєкт створено без допомоги професійних програмістів та маркетологів. Це рішення <strong>від педагогів для педагогів</strong>. Ми спочатку перевірили цю ідею у власних дитячих освітніх центрах, отримали позитивний відгук від батьків та побачили інтерес дітей.</p>
+                <p>Тільки після цього ми пропонуємо вам приєднатися до пілотного проєкту, будучи впевненими у його ефективності. Ми ділимося своїм досвідом і раді будемо новим <strong>колегам-практикам</strong>!</p>
+                <p>Проєкт Educatimo Neuro зародився у 2018 році як локальне рішення для оцінювання та корекції когнітивних функцій у <strong>наших дитячих освітніх центрах</strong>. Сьогодні, завдяки співпраці з провідними нейропсихологами, ми перетворили його на масштабовану SaaS-платформу. Наша команда має 10-річний досвід у розробці освітніх технологій і гарантує методологічну точність кожного тесту та алгоритму.</p>
                 <a href="team-ua.html" class="btn secondary-btn">Дізнатися більше про команду</a> </div>
-
+                
             <div class="reviews-grid">
                 <h3>Що говорять наші партнери?</h3>
                 <div class="review-item">
