fix: remove .html extensions from internal links

--- a/cz.html
+++ b/cz.html
@@ -95,13 +95,13 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Neuro Educatimo</a>
+            <a href="/" class="navbar-brand">Neuro Educatimo</a>
             <div class="lang-switcher">
-                <a href="ua.html">UA</a>
-                <a href="en.html">EN</a>
-                <a href="pl.html">PL</a>
-                <a href="cz.html" class="active">CZ</a>
-                <a href="index.html">RU</a>
+                <a href="ua">UA</a>
+                <a href="en">EN</a>
+                <a href="pl">PL</a>
+                <a href="cz" class="active">CZ</a>
+                <a href="/">RU</a>
             </div>
         </div>
     </nav>
@@ -299,7 +299,7 @@
                     neuropsychology, jsme jej transformovali na škálovatelnou SaaS platformu. Náš tým má 10 let
                     zkušeností s vývojem vzdělávacích technologií a zaručuje metodickou přesnost každého testu a
                     algoritmu.</p>
-                <a href="team-cz.html" class="btn secondary-btn">Zjistit více o týmu</a>
+                <a href="team-cz" class="btn secondary-btn">Zjistit více o týmu</a>
             </div>
 
             <div class="reviews-slider-wrapper">
