--- a/team-pl.html
+++ b/team-pl.html
@@ -18,13 +18,13 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Neuro Educatimo</a>
+            <a href="/" class="navbar-brand">Neuro Educatimo</a>
             <div class="lang-switcher">
-                <a href="ua.html">UA</a>
-                <a href="en.html">EN</a>
-                <a href="pl.html" class="active">PL</a>
-                <a href="cz.html">CZ</a>
-                <a href="index.html">RU</a>
+                <a href="ua">UA</a>
+                <a href="en">EN</a>
+                <a href="pl" class="active">PL</a>
+                <a href="cz">CZ</a>
+                <a href="/">RU</a>
             </div>
         </div>
     </nav>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <a href="pl.html" class="btn secondary-btn back-button">← Powrót do strony głównej</a>
+            <a href="pl" class="btn secondary-btn back-button">← Powrót do strony głównej</a>
 
         </div>
     </section>
