--- a/en.html
+++ b/en.html
@@ -95,13 +95,13 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Neuro Educatimo</a>
+            <a href="/" class="navbar-brand">Neuro Educatimo</a>
             <div class="lang-switcher">
-                <a href="ua.html">UA</a>
-                <a href="en.html" class="active">EN</a>
-                <a href="pl.html">PL</a>
-                <a href="cz.html">CZ</a>
-                <a href="index.html">RU</a>
+                <a href="ua">UA</a>
+                <a href="en" class="active">EN</a>
+                <a href="pl">PL</a>
+                <a href="cz">CZ</a>
+                <a href="/">RU</a>
             </div>
         </div>
     </nav>
@@ -300,7 +300,7 @@
                     leading neuropsychologists, we have transformed it into a scalable SaaS platform. Our team has 10
                     years of experience in developing educational technologies and guarantees the methodological
                     accuracy of every test and algorithm.</p>
-                <a href="team-en.html" class="btn secondary-btn">Find out more about the team</a>
+                <a href="team-en" class="btn secondary-btn">Find out more about the team</a>
             </div>
 
             <div class="reviews-slider-wrapper">
