--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Neuro Educatimo</a>
+            <a href="/" class="navbar-brand">Neuro Educatimo</a>
             <div class="lang-switcher">
-                <a href="ua.html">UA</a>
-                <a href="en.html">EN</a>
-                <a href="pl.html">PL</a>
-                <a href="cz.html">CZ</a>
-                <a href="index.html" class="active">RU</a>
+                <a href="ua">UA</a>
+                <a href="en">EN</a>
+                <a href="pl">PL</a>
+                <a href="cz">CZ</a>
+                <a href="/" class="active">RU</a>
             </div>
         </div>
     </nav>
@@ -299,7 +299,7 @@
                     с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет
                     10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность
                     каждого теста и алгоритма.</p>
-                <a href="team.html" class="btn secondary-btn">Узнать больше о команде</a>
+                <a href="team" class="btn secondary-btn">Узнать больше о команде</a>
             </div>
 
             <div class="reviews-slider-wrapper">
