--- a/pl.html
+++ b/pl.html
@@ -95,13 +95,13 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Neuro Educatimo</a>
+            <a href="/" class="navbar-brand">Neuro Educatimo</a>
             <div class="lang-switcher">
-                <a href="ua.html">UA</a>
-                <a href="en.html">EN</a>
-                <a href="pl.html" class="active">PL</a>
-                <a href="cz.html">CZ</a>
-                <a href="index.html">RU</a>
+                <a href="ua">UA</a>
+                <a href="en">EN</a>
+                <a href="pl" class="active">PL</a>
+                <a href="cz">CZ</a>
+                <a href="/">RU</a>
             </div>
         </div>
     </nav>
@@ -301,7 +301,7 @@
                     wiodącymi neuropsychologami, przekształciliśmy go w skalowalną platformę SaaS. Nasz zespół ma
                     10-letnie doświadczenie w tworzeniu technologii edukacyjnych i gwarantuje metodyczną dokładność
                     każdego testu i algorytmu.</p>
-                <a href="team-pl.html" class="btn secondary-btn">Dowiedz się więcej o zespole</a>
+                <a href="team-pl" class="btn secondary-btn">Dowiedz się więcej o zespole</a>
             </div>
 
             <div class="reviews-slider-wrapper">
