--- a/ua.html
+++ b/ua.html
@@ -95,13 +95,13 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Neuro Educatimo</a>
+            <a href="/" class="navbar-brand">Neuro Educatimo</a>
             <div class="lang-switcher">
-                <a href="ua.html" class="active">UA</a>
-                <a href="en.html">EN</a>
-                <a href="pl.html">PL</a>
-                <a href="cz.html">CZ</a>
-                <a href="index.html">RU</a>
+                <a href="ua" class="active">UA</a>
+                <a href="en">EN</a>
+                <a href="pl">PL</a>
+                <a href="cz">CZ</a>
+                <a href="/">RU</a>
             </div>
         </div>
     </nav>
@@ -298,7 +298,7 @@
                     провідними нейропсихологами, ми перетворили його на масштабовану SaaS-платформу. Наша команда має
                     10-річний досвід у розробці освітніх технологій і гарантує методологічну точність кожного тесту та
                     алгоритму.</p>
-                <a href="team-ua.html" class="btn secondary-btn">Дізнатися більше про команду</a>
+                <a href="team-ua" class="btn secondary-btn">Дізнатися більше про команду</a>
             </div>
 
             <div class="reviews-slider-wrapper">
