feat: add /ru page and link

--- a/team-cz.html
+++ b/team-cz.html
@@ -24,7 +24,7 @@
                 <a href="en">EN</a>
                 <a href="pl">PL</a>
                 <a href="cz" class="active">CZ</a>
-                <a href="/">RU</a>
+                <a href="ru">RU</a>
             </div>
         </div>
     </nav>
