--- a/team-en.html
+++ b/team-en.html
@@ -24,7 +24,7 @@
                 <a href="en" class="active">EN</a>
                 <a href="pl">PL</a>
                 <a href="cz">CZ</a>
-                <a href="/">RU</a>
+                <a href="ru">RU</a>
             </div>
         </div>
     </nav>
