--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
                 <a href="en">EN</a>
                 <a href="pl">PL</a>
                 <a href="cz">CZ</a>
-                <a href="/" class="active">RU</a>
+                <a href="ru" class="active">RU</a>
             </div>
         </div>
     </nav>
