--- a/pl.html
+++ b/pl.html
@@ -101,7 +101,7 @@
                 <a href="en">EN</a>
                 <a href="pl" class="active">PL</a>
                 <a href="cz">CZ</a>
-                <a href="/">RU</a>
+                <a href="ru">RU</a>
             </div>
         </div>
     </nav>
