--- a/ua.html
+++ b/ua.html
@@ -89,6 +89,7 @@
     }
     </script>
 
+    <meta name="google-site-verification" content="KrzmliF-nHu1rheg7v32mG0YxD9468OMmXtlGesgtG0" />
 </head>
 
 <body>
