--- a/uk/quiz.html
+++ b/uk/quiz.html
@@ -224,8 +224,7 @@ document.getElementById('quiz-form').addEventListener('submit', async function(e
         var formData = new FormData(this);
         var resp = await fetch('/api/register', { method: 'POST', body: formData, headers: { 'Accept': 'application/json' } });
         if (resp.ok) {
-            // FB Lead: срабатывает когда форма успешно отправлена на почту (сервер вернул 2xx)
-            if (typeof fbq === 'function') fbq('track', 'Lead');
+            try { if (window.fbq) window.fbq('track', 'Lead', { content_name: 'Quiz' }); } catch (_) {}
             document.getElementById('quiz-form-section').style.display = 'none';
             document.getElementById('quiz-success-block').style.display = 'block';
             document.getElementById('success-email').innerText = submittedEmail;
