content: update hero H1/H2 and Залежність від педагогів block (uk/ru/en/pl/cs)
Made-with: Cursor

--- a/cs/index.html
+++ b/cs/index.html
@@ -133,8 +133,8 @@
 
     <section id="hero">
         <div class="container">
-            <h1>Neuro.Educatimo: Měníme «víru ve výsledek» za řízení podle faktů.</h1>
-            <p>První SaaS platforma rozvoje založeného na důkazech od praktiků. Proměňte vzdělávání v řízený systém: 30minutová hra (online/offline) vytvoří digitální profil žáka, prokáže efektivitu rodičům a zvýší LTV klienta.</p>
+            <h1>Prokazujte výsledky výuky čísly, ne slovy</h1>
+            <p>Neuro Educatimo vytvoří kognitivní profil žáka za 30 minut a vygeneruje zprávu pod značkou vaší školy. Rodiče vidí skutečný pokrok — a zůstávají s vámi na léta</p>
             <a href="#registration" class="btn">Zavést přístup založený na důkazech</a>
         </div>
     </section>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="problem-item">
                     <h3>Závislost na pedagogy</h3>
-                    <p>Kvalita diagnostiky «kolísá» od učitele k učiteli. Chybí vám jednotný standard kontroly kvality napříč pobočkami nebo skupinami.</p>
+                    <p>Úroveň výuky se liší učitel od učitele. Nemáte jednotný standard kontroly kvality výuky napříč pobočkami nebo skupinami.</p>
                 </div>
                 <div class="problem-item">
                     <h3>Ztracený zisk</h3>
