--- a/en/index.html
+++ b/en/index.html
@@ -133,8 +133,8 @@
 
     <section id="hero">
         <div class="container">
-            <h1>Neuro.Educatimo: Trading 'faith in results' for management by facts.</h1>
-            <p>The first evidence-based development SaaS platform built by practitioners. Turn education into a managed system: a 30-minute game quest (online/offline) creates a student's digital profile, proves effectiveness to parents, and increases client LTV.</p>
+            <h1>Prove learning outcomes with data, not words</h1>
+            <p>Neuro Educatimo creates a cognitive profile of each student in 30 minutes and generates a report under your school's brand. Parents see real progress — and stay with you for years</p>
             <a href="#registration" class="btn">Implement evidence-based approach</a>
         </div>
     </section>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="problem-item">
                     <h3>Dependence on teachers</h3>
-                    <p>Diagnostic quality varies from teacher to teacher. You lack a unified standard for quality control across different branches or groups.</p>
+                    <p>Teaching quality varies from teacher to teacher. You have no unified standard for monitoring learning quality across different branches or groups.</p>
                 </div>
                 <div class="problem-item">
                     <h3>Lost profit</h3>
