--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
     <section id="hero">
         <div class="container">
-            <h1>Neuro.Educatimo: Меняем «веру в результат» на управление фактами.</h1>
-            <p>Первая SaaS-платформа доказательного развития от практиков. Превратите обучение в управляемую систему: 30-минутный игровой квест (онлайн/офлайн) создает цифровой профиль ученика, доказывает эффективность родителям и увеличивает LTV клиента.</p>
+            <h1>Доказывайте результаты обучения цифрами, а не словами</h1>
+            <p>Neuro Educatimo за 30 минут создаёт когнитивный профиль ученика и генерирует отчёт под брендом вашей школы. Родители видят реальный прогресс — и остаются с вами на годы</p>
             <a href="#registration" class="btn">Внедрить доказательный подход</a>
         </div>
     </section>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="problem-item">
                     <h3>Зависимость от педагогов</h3>
-                    <p>Качество диагностики «плавает» от учителя к учителю. У вас нет единого стандарта контроля качества обучения в разных филиалах или группах.</p>
+                    <p>Уровень преподавания «плавает» от учителя к учителю. У вас нет единого стандарта контроля качества обучения в разных филиалах или группах.</p>
                 </div>
                 <div class="problem-item">
                     <h3>Упущенная прибыль</h3>
