--- a/pl/index.html
+++ b/pl/index.html
@@ -133,8 +133,8 @@
 
     <section id="hero">
         <div class="container">
-            <h1>Neuro.Educatimo: Zamieniamy «wiarę w wynik» na zarządzanie faktami.</h1>
-            <p>Pierwsza platforma SaaS rozwoju opartego na dowodach, stworzona przez praktyków. Zamień edukację w system zarządzalny: 30-minutowa gra (online/offline) tworzy cyfrowy profil ucznia, dowodzi skuteczności rodzicom i zwiększa LTV klienta.</p>
+            <h1>Udowadniaj wyniki nauczania liczbami, nie słowami</h1>
+            <p>Neuro Educatimo w 30 minut tworzy profil kognitywny ucznia i generuje raport pod marką Twojej szkoły. Rodzice widzą realny postęp — i zostają z Tobą na lata</p>
             <a href="#registration" class="btn">Wdróż podejście oparte na dowodach</a>
         </div>
     </section>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="problem-item">
                     <h3>Zależność od pedagogów</h3>
-                    <p>Jakość diagnostyki «pływa» od nauczyciela do nauczyciela. Brakuje Ci jednego standardu kontroli jakości w różnych oddziałach lub grupach.</p>
+                    <p>Poziom nauczania różni się w zależności od nauczyciela. Nie masz jednolitego standardu kontroli jakości nauczania w różnych oddziałach czy grupach.</p>
                 </div>
                 <div class="problem-item">
                     <h3>Stracony zysk</h3>
