--- a/uk/index.html
+++ b/uk/index.html
@@ -133,8 +133,8 @@
 
     <section id="hero">
         <div class="container">
-            <h1>Neuro.Educatimo: Міняємо «віру в результат» на управління фактами.</h1>
-            <p>Перша SaaS-платформа доказового розвитку від практиків. Перетворіть навчання на керовану систему: 30-хвилинний ігровий квест (онлайн/офлайн) створює цифровий профіль учня, доводить ефективність батькам та збільшує LTV клієнта.</p>
+            <h1>Доводьте результати навчання цифрами, а не словами</h1>
+            <p>Neuro Educatimo за 30 хвилин створює когнітивний профіль учня та генерує звіт під брендом вашої школи. Батьки бачать реальний прогрес і залишаються з вами на роки</p>
             <a href="#registration" class="btn">Впровадити доказовий підхід</a>
         </div>
     </section>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="problem-item">
                     <h3>Залежність від педагогів</h3>
-                    <p>Якість діагностики «плаває» від вчителя до вчителя. У вас немає єдиного стандарту контролю якості навчання в різних філіях або групах.</p>
+                    <p>Рівень викладання «плаває» від вчителя до вчителя. У вас немає єдиного стандарту контролю якості навчання в різних філіях або групах.</p>
                 </div>
                 <div class="problem-item">
                     <h3>Втрачений прибуток</h3>
